<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="@string/day_of_execution">
        <menu>
            <item android:title="@string/today"
                android:id="@+id/dayBt"
                android:fontFamily="@font/poppins_light" />

            <item android:title="@string/this_week"
                android:id="@+id/weekBt"
                android:fontFamily="@font/poppins_light" />

            <item android:title="@string/this_month"
                android:id="@+id/monthBt"
                android:fontFamily="@font/poppins_light" />

            <item android:title="@string/this_year"
                android:id="@+id/yearBt"
                android:fontFamily="@font/poppins_light" />

            <item android:title="@string/all"
                android:id="@+id/allBt"
                android:fontFamily="@font/poppins_light" />

        </menu>
    </item>
    <item android:title="@string/other">
        <menu>
            <item android:title="@string/settings"
                android:id="@+id/settingsBt"
                android:fontFamily="@font/poppins_light" />
        </menu>
    </item>
</menu>